# mpris-server

./: Cargo.toml
src/: main.rs
src/models/: player.rs
src/routes/: mod.rs  mpris.rs  websocket.rs
