[package]
name = "mpris-server"
version = "0.1.0"
edition = "2021"
authors = ["Emil Blennow <emil.blennow99@gmail.com>", "Axel Froborg <axel.froborg@gmail.com>"]
homepage = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.2"
actix-web = "4.1.0"
mpris= "1.1.2"
serde = { version = "1.0.143", features = ["derive"] }
